better-customize/examples/default/rendered/frontend/sourcegraph-frontend-internal.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sourcegraph-frontend
    app.kubernetes.io/component: frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: sourcegraph-frontend-internal
spec:
  ports:
    - name: http-internal
      port: 80
      targetPort: http-internal
  selector:
    app: sourcegraph-frontend
  type: ClusterIP
