better-customize/examples/default/rendered/frontend/sourcegraph-frontend.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6060"
    sourcegraph.prometheus/scrape: "true"
  labels:
    app: sourcegraph-frontend
    app.kubernetes.io/component: frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: sourcegraph-frontend
spec:
  ports:
    - name: http
      nodePort: 30080
      port: 30080
      targetPort: http
  selector:
    app: sourcegraph-frontend
  type: NodePort
